syntax = "proto3";

import "json_options.proto";

package overlapping;

option go_package = "./overlapping";

message DateRange {
  string start_date = 1 [(json_name) = "startDate"];
  string end_date = 2 [(json_name) = "endDate"];
}

message OverlappingRequest {
  DateRange range1 = 1 [(json_name) = "range1"];
  DateRange range2 = 2 [(json_name) = "range2"];
}

message OverlappingResponse {
  bool overlap = 1 [(json_name) = "overlap"];
}